<resources>
    <string name="app_name">Room Sample</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="job_title">Job title</string>
    <string name="gender_male_female">Gender (Male/ Female)</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="saved_users">Saved Users</string>
    <string name="no_users">No users found</string>
    <string name="add_new_user">Add New User</string>

    <string name="saved_users_n">Saved Users (%1$d)</string>
    <string name="msg_user_added">User added successfully</string>
    <string name="req_name">Name Required</string>
    <string name="req_age">Age Required</string>
    <string name="req_job">Job Title Required</string>
    <string name="req_gender">Gender Required</string>
</resources>